syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message MigrateDiskRequest {
    types.Disk Disk = 1;
    string DstZoneId = 2;
}

message MigrateDiskTaskState {
    MigrateDiskRequest Request = 1;
}
